--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.16.2",
     "express": "^4.14.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^4.1.2"
   },
   "babel": "^6.5.2",
   "devDependencies": {
