--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.14.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.1.2"
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.2.2"
   },
   "babel": "^6.5.2",
   "devDependencies": {
